# discr-tools

./: README.md  discretization.py  pyproject.toml
discr-tools/: assembly.py  discretization.py  geometry.py  mesh.py  nodal.py  visualization.py
discr_tools/: assembly.py  discretization.py  geometry.py  kernels.py  matvecs.py  mesh.py  nodal.py  operators.py  solvers.py  visualization.py
discretization/: geometry.py
examples/: poisson.py
examples/.ipynb_checkpoints/: advection-checkpoint.py  poisson-checkpoint.py
examples/tutorial/blanks/: gpu.ipynb
examples/tutorial/blanks/.ipynb_checkpoints/: intro-checkpoint.ipynb
examples/tutorial/filled-out/: gpu.ipynb  intro.ipynb
tests/: test_kernels.py
