[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "discr_tools"
version = "0.0.1"
description = "SEM discretization helper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "meshmode",
    "numpy",
    "scipy",
]
